<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dimen_ten"
    android:layout_marginEnd="@dimen/dimen_ten"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/NH_Close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9.3"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/app_information"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_twenty" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.7"
            android:background="@drawable/app_info_close_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/dimen_two"
            android:src="@drawable/app_info_close"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_twenty"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/velocity"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_forty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_eight"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/open_sans"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sixteen" />

        <!--<TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/open_sans"
            android:text="@string/updated_24_feb_22"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sixteen" />-->

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_one"
        android:layout_marginTop="@dimen/dimen_fifteen"
        android:layout_marginBottom="@dimen/dimen_fifteen"
        android:background="@color/colorHint" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_copyrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/open_sans"
            android:gravity="center_vertical"
            android:text="@string/copyright_label_pvt_ltd"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_thirteen_point_five" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_webxpress_logo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimen_five"
            android:layout_marginTop="@dimen/dimen_three"
            android:layout_toEndOf="@+id/tv_copyrights"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/iv_webxpress_logo"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_one"
        android:layout_marginTop="@dimen/dimen_fifteen"
        android:layout_marginBottom="@dimen/dimen_fifteen"
        android:background="@color/colorHint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_five"
        android:layout_marginBottom="@dimen/dimen_ten"
        android:fontFamily="@font/open_sans"
        android:text="@string/connected_company"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_sixteen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_forty_five"
        android:layout_marginTop="@dimen/dimen_five"
        android:layout_marginBottom="@dimen/dimen_ten"
        android:background="@drawable/box_bg"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_registrationcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_fifteen"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/agility"
            android:textAllCaps="true"
            android:textColor="@color/colorHint"
            android:textSize="@dimen/dimen_sixteen" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dimen_fifteen"
            android:layout_weight="1">

            <TextView
                android:id="@+id/diconnect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/disconnect"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimen_sixteen"
                tools:ignore="RtlCompat" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>